--- a/.github/workflows/publish_app_dev.yaml
+++ b/.github/workflows/publish_app_dev.yaml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: dev
+          fetch-depth: 0
 
       # APK签名设置
       - name: Download Android keystore
